--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Roundup</title>
+    <title>Mario2</title>
     <script src='/js/phaser.min.js'></script>
     <script src='/js/game.js'></script>
     <script src='/js/menu.js'></script>
