--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>Mario</title>
-    <script src='/js/phaser.js'></script>
+    <script src='/js/phaser.min.js'></script>
     <script src='/js/game.js'></script>
     <script src='/js/menu.js'></script>
     <script src='/js/lvl1.js'></script>
